--- a/BackpackApp/tsconfig.json
+++ b/BackpackApp/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "/workspaces/Backpack/BackpackApp/node_modules/expo/tsconfig.base.json",
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true
   }
