--- a/BackpackApp/app.json
+++ b/BackpackApp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "BackpackApp",
-    "slug": "BackpackApp",
+    "slug": "backpack",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,6 +25,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "cef1179a-4579-48a1-9132-7288a99246e3"
+      }
+    },
+    "owner": "127msafran"
   }
 }
