--- a/Backpack/app.json
+++ b/Backpack/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "BackpackApp",
-    "slug": "backpack",
+    "name": "Backpack",
+    "slug": "Backpack",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,12 +25,6 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "cef1179a-4579-48a1-9132-7288a99246e3"
-      }
-    },
-    "owner": "127msafran"
+    }
   }
 }
