--- a/Backpack/package.json
+++ b/Backpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backpackapp",
+  "name": "backpack",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -10,16 +10,10 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.10.1",
-    "@react-navigation/drawer": "^7.7.13",
-    "expo": "^54.0.32",
+    "expo": "~54.0.32",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native": "0.81.5"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
